--- a/client/lib/components/stocktake/order_receipts/item/view.html
+++ b/client/lib/components/stocktake/order_receipts/item/view.html
@@ -1,5 +1,5 @@
 <template name="orderReceiptItem">
-  <tr>
+  <tr data-id="{{state$receipt._id}}">
     <td>{{dateFormat state$receipt.expectedDeliveryDate}}</td>
     <td>{{state$receipt.supplier}}</td>
     <td>$ {{state$orderedValue}}</td>
@@ -10,7 +10,7 @@
       {{#if state$receipt.received}}
         <a class="btn btn-link">Delivery received by User @ 23/13/15 10.31am</a>
       {{else}}
-        <a href="/stocktake/order/receive/{{state$receipt._id}}" class="btn btn-primary"><i class="fa -o fa-fw fa-lg fa-check-square-o"></i>Receive this delivery now</a>
+        <a href="#" class="btn btn-primary receiveDelivery"><i class="fa -o fa-fw fa-lg fa-check-square-o"></i>Receive this delivery now</a>
       {{/if}}
     </td>
     <td>
