fix user received details'

--- a/client/lib/components/stocktake/order_receipts/list/view.html
+++ b/client/lib/components/stocktake/order_receipts/list/view.html
@@ -22,7 +22,7 @@
               <th>Ordered Value</th>
               <th>Actual Invoiced Amount</th>
               <th>Received</th>
-              <th>Invoice Uploaded</th>
+              <!-- <th>Invoice Uploaded</th> -->
             </tr>
           </thead>
           <tbody>
