--- a/client/lib/components/stocktake/order_receipts/item/view.html
+++ b/client/lib/components/stocktake/order_receipts/item/view.html
@@ -8,13 +8,13 @@
     <td>$ <a href="#" class="invoiceValue">{{state$receipt.invoiceFaceValue}}</a></td>
     <td>
       {{#if state$receipt.received}}
-        <a class="btn btn-link">Delivery received by User @ 23/13/15 10.31am</a>
+        <a class="btn btn-link">Delivery received by {{Username state$receipt.receivedBy}} @ {{DateTime state$receipt.receivedDate}}</a>
       {{else}}
         <a href="#" class="btn btn-primary receiveDelivery"><i class="fa -o fa-fw fa-lg fa-check-square-o"></i>Receive this delivery now</a>
       {{/if}}
     </td>
-    <td>
+    <!-- <td>
       <a class="btn btn-link"><i class="-o -square-o fa fa-check fa-fw fa-lg text-primary"></i></a>
-    </td>
+    </td> -->
   </tr>
 </template>
