actual invoice value update added

--- a/client/lib/components/stocktake/order_receipts/item/view.html
+++ b/client/lib/components/stocktake/order_receipts/item/view.html
@@ -2,13 +2,13 @@
   <tr data-id="{{state$receipt._id}}">
     <td>{{dateFormat state$receipt.expectedDeliveryDate}}</td>
     <td>{{state$receipt.supplier}}</td>
-    <td>$ {{state$orderedValue}}</td>
+    <td>$ {{roundCount state$orderedValue}}</td>
     <!--this amount is entered by xeditable by user receiving the
     delivery-->
     <td>$ <a href="#" class="invoiceValue">{{state$receipt.invoiceFaceValue}}</a></td>
     <td>
       {{#if state$receipt.received}}
-        <a class="btn btn-link">Delivery received by {{Username state$receipt.receivedBy}} @ {{DateTime state$receipt.receivedDate}}</a>
+        <a class="btn btn-link receiveDelivery">Delivery received by {{Username state$receipt.receivedBy}} @ {{DateTime state$receipt.receivedDate}}</a>
       {{else}}
         <a href="#" class="btn btn-primary receiveDelivery"><i class="fa -o fa-fw fa-lg fa-check-square-o"></i>Receive this delivery now</a>
       {{/if}}
