--- a/client/lib/components/stocktake/new_stocktake/view.html
+++ b/client/lib/components/stocktake/new_stocktake/view.html
@@ -6,10 +6,15 @@
         <h4 class="modal-title" id="myModalLabel">Important..!</h4>
       </div>
       <div class="modal-body">
-        You already have a stocktake for this day. Do you want to create a new one?
-        <br><br>
-        <button class="btn btn-small btn-primary createNewStocktake">Create new stocktake</button>
-        <button class="btn btn-small btn-primary gotoExistingStocktake">Go to latest exisiting stocktake</button>
+        <div>
+          <p>You already have a stocktake for this day. Do you want to create a new one?</p>
+          <br>
+          <div class="pull-right">
+            <button class="btn btn-small btn-primary createNewStocktake">Create new stocktake</button>
+            <button class="btn btn-small btn-primary gotoExistingStocktake">Go to latest exisiting stocktake</button>
+          </div>
+          <br><br>
+        </div>
       </div>
     </div>
   </div>
