--- a/client/lib/components/stocktake/counting/list_item/view.html
+++ b/client/lib/components/stocktake/counting/list_item/view.html
@@ -1,5 +1,5 @@
 <template name="stockCountingListItem">
-  <li class="list-group-item" data-id="{{state$item._id}}" data-stockRef="{{state$item.stockRef}}">
+  <li class="list-group-item" data-id="{{state$item._id}}" data-stockRef="{{state$item.stockRef}}" data-place="{{state$item.place}}">
     {{#if state$editable}}
       <i class="fa fa-fw fa-reorder"></i>
     {{/if}}
