--- a/client/lib/components/stocktake/counting/list/view.html
+++ b/client/lib/components/stocktake/counting/list/view.html
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="col-lg-12">
       <a class="btn btn-primary btn-sm pull-right generateOrders">Save stocktake &amp; generate orders<br></a>
-      <!-- {{#if state$ordersExist}} -->
-        <!-- <a class="btn btn-primary btn-sm pull-right" href="/stocktake/orders/{{dateFormat state$date}}">View Orders placed<br></a> -->
-      <!-- {{/if}} -->
-      <a class="btn btn-link btn-sm pull-right editStockTake"><i class="fa fa-fw fa-edit"></i>Edit</a>
+      {{#if state$editable}}
+      {{else}}
+        <a class="btn btn-link btn-sm pull-right editStockTake"><i class="fa fa-fw fa-edit"></i>Edit</a>
+      {{/if}}
       {{dateFormat state$stocktakeMain.stocktakeDate}}
       <hr>
     </div>
@@ -15,7 +15,7 @@
     {{> render component="areaFilters"}}
     {{#if state$filtered}}
       <div class="col-md-8">
-        <ul class="list-group">
+        <ul class="list-group sortableStockItems">
           {{#each state$list.stocks}}
             {{> render component="stockCountingListItem" id=this version=state$stocktakeMain._id garea=state$list.generalArea sarea=state$list._id}}
           {{else}}
