--- a/client/lib/components/stocktake/counting/list/view.html
+++ b/client/lib/components/stocktake/counting/list/view.html
@@ -17,7 +17,7 @@
       <div class="col-md-8">
         <ul class="list-group sortableStockItems">
           {{#each state$list.stocks}}
-            {{> render component="stockCountingListItem" id=this version=state$stocktakeMain._id garea=state$list.generalArea sarea=state$list._id}}
+            {{> render component="stockCountingListItem" id=this version=state$version garea=state$generalArea sarea=state$specialArea}}
           {{else}}
             No items on this list
           {{/each}}
