--- a/client/lib/components/users/pin_code/pin_code.html
+++ b/client/lib/components/users/pin_code/pin_code.html
@@ -1,22 +1,19 @@
 <template name="pinCode">
   <div class="ibox float-e-margins">
-    <div>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
       <div class="ibox-content no-padding border-left-right">
-        <img alt="image" class="img-responsive" src="{{state$image}}">
+        <img alt="image" class="img-responsive center-block" src="{{state$image}}">
       </div>
       <div class="ibox-content profile-content">
-        <h4>
+        <h2 class="text-center">
           <strong>
-            {{#if state$isEditPermitted}}
-              <a href="#" id="username" data-id="{{state$basic._id}}" class="editable">{{state$basic.username}}</a>
-            {{else}}
-              {{state$basic.username}}
-            {{/if}}
+            {{state$basic.username}}
           </strong>
-        </h4>
+        </h2>
         <br>
         <form>
-          <label for="pin-code">Enter your PIN to unlock</label>
+          <label for="pin-code" class="lead">Enter your PIN to unlock</label>
           <div class="row">
             <div class="col-xs-4">
               <input type="password"
@@ -28,17 +25,21 @@
                      required
                      placeholder="****">
             </div>
+            <div class="col-xs-8">
+              <button type="submit" class="btn btn-default">Unlock</button>
+            </div>
           </div>
           <br>
-          <button type="submit" class="btn btn-default">Unlock</button>
         </form>
         <hr>
+        <p class="lead">
+          Not you?
+        </p>
         <p>
-        <h4>Not you?</h4>
-        <br>
-        <button class="btn btn-default" id="switch-user">Switch user</button>
+          <button class="btn btn-default" id="switch-user">Switch user</button>
         </p>
       </div>
+    </div>
     </div>
   </div>
 </template>
