enter to next focus fixed

--- a/client/lib/components/stocktake/ordering/list/view.html
+++ b/client/lib/components/stocktake/ordering/list/view.html
@@ -18,7 +18,7 @@
           </thead>
           <tbody>
             {{#each state$list}}
-              {{> render component="ordersListItem" item=this}}
+              {{> render component="ordersListItem" itemId=this}}
             {{/each}}
           </tbody>
         </table>
