--- a/client/lib/components/stocktake/counting/list/view.html
+++ b/client/lib/components/stocktake/counting/list/view.html
@@ -3,6 +3,7 @@
     <div class="col-lg-12">
       <a class="btn btn-primary btn-sm pull-right generateOrders">Save stocktake &amp; generate orders<br></a>
       {{#if state$editable}}
+        <a class="btn btn-link btn-sm pull-right saveStockTake"><i class="fa fa-fw fa-save"></i>Save</a>
       {{else}}
         <a class="btn btn-link btn-sm pull-right editStockTake"><i class="fa fa-fw fa-edit"></i>Edit</a>
       {{/if}}
