--- a/client/lib/components/stocktake/ordering/list/view.html
+++ b/client/lib/components/stocktake/ordering/list/view.html
@@ -2,26 +2,31 @@
   <div class="col-lg-12">
     <div class="ibox ">
       <div class="ibox-content">
-        {{> render component="supplierFilter"}}
-        <table class="table table-condensed table-hover table-striped">
-          <thead>
-            <tr>
-              <th>Stock item</th>
-              <th>On hand</th>
-              <th>Needed</th>
-              <th>To order</th>
-              {{#if state$supplier}}
-              {{else}}
-                <th>Action</th>
-              {{/if}}
-            </tr>
-          </thead>
-          <tbody>
-            {{#each state$list}}
-              {{> render component="ordersListItem" itemId=this}}
-            {{/each}}
-          </tbody>
-        </table>
+        {{#if state$list}}
+          {{> render component="supplierFilter"}}
+          <table class="table table-condensed table-hover table-striped">
+            <thead>
+              <tr>
+                <th>Stock item</th>
+                <th>On hand</th>
+                <th>Needed</th>
+                <th>To order</th>
+                {{#if state$supplier}}
+                {{else}}
+                  <th>Action</th>
+                {{/if}}
+              </tr>
+            </thead>
+            <tbody>
+              {{#each state$list}}
+                {{> render component="ordersListItem" itemId=this}}
+              {{/each}}
+            </tbody>
+          </table>
+        {{else}}
+          <h4>You haven't created any orders.</h4> <br>
+          <a href="#" class="gotoStocktake">Click here</a> to go to the stocktake and create orders. 
+        {{/if}}
       </div>
     </div>
   </div>
