--- a/client/lib/components/users/pin_code/pin_code.html
+++ b/client/lib/components/users/pin_code/pin_code.html
@@ -1,45 +1,28 @@
 <template name="pinCode">
-  <div class="ibox float-e-margins">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
-      <div class="ibox-content no-padding border-left-right">
-        <img alt="image" class="img-responsive center-block" src="{{state$image}}">
-      </div>
-      <div class="ibox-content profile-content">
-        <h2 class="text-center">
-          <strong>
-            {{state$basic.username}}
-          </strong>
-        </h2>
-        <br>
-        <form>
-          <label for="pin-code" class="lead">Enter your PIN to unlock</label>
-          <div class="row">
-            <div class="col-xs-4">
-              <input type="password"
-                     id="pin-code"
-                     class="form-control"
-                     maxlength="4"
-                     minlength="4"
-                     pattern="^\d{4}$"
-                     required
-                     placeholder="****">
-            </div>
-            <div class="col-xs-8">
-              <button type="submit" class="btn btn-default">Unlock</button>
-            </div>
-          </div>
-          <br>
-        </form>
-        <hr>
-        <p class="lead">
-          Not you?
-        </p>
-        <p>
-          <button class="btn btn-default" id="switch-user">Switch user</button>
-        </p>
-      </div>
+  <div>
+    <div class="m-b-md">
+      <img alt="image" class="img-circle circle-border" src="{{state$image}}">
     </div>
-    </div>
+    <h3>{{state$basic.username}}</h3>
+    <p>Enter your PIN to unlock </p>
+    <form class="m-t" role="form">
+      <div class="form-group">
+        <input type="password"
+               class="form-control"
+               placeholder="****"
+               required=""
+               id="pin-code"
+               maxlength="4"
+               pattern="^\d{4}$">
+      </div>
+      <button type="submit" class="btn btn-primary block full-width">
+        Unlock
+      </button>
+      <hr />
+      <h3>Not you?</h3>
+      <button type="button" class="btn block full-width btn-warning" id="switch-user">
+        Switch User
+      </button>
+    </form>
   </div>
 </template>
