Display error message.

--- a/client/lib/components/users/pin_code/pin_code.html
+++ b/client/lib/components/users/pin_code/pin_code.html
@@ -13,7 +13,8 @@
                required=""
                id="pin-code"
                maxlength="4"
-               pattern="^\d{4}$">
+               pattern="^\d{4}$"
+               title="Required four-digit PIN.">
       </div>
       <button type="submit" class="btn btn-primary block full-width">
         Unlock
