Created `inactivityTimeoutField` component.

--- a/client/views/main_views/admin/list.html
+++ b/client/views/main_views/admin/list.html
@@ -26,6 +26,9 @@
           <div class="panel-body">
             <div class="tab-content">
               <div class="tab-pane active" id="usersList">
+                <strong>Inactivity timeout</strong>
+                {{> render component='inactivityTimeoutField'}}
+                <br>
                 <strong>Users List</strong>
                 {{> render component='usersList'}}
               </div>
