--- a/client/views/main_views/stocktake/order_receive.html
+++ b/client/views/main_views/stocktake/order_receive.html
@@ -1,6 +1,6 @@
 <template name="orderReceiveMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title='Suppleir Orders Receive' category="Stocktake"}}
+  {{> render component="pageHeading" title=title category="Stocktake"}}
 
   <div class="wrapper wrapper-content">
     <div class="row">
