--- a/client/lib/components/stocktake/ordering/list/view.html
+++ b/client/lib/components/stocktake/ordering/list/view.html
@@ -2,7 +2,7 @@
   <div class="col-lg-12">
     <div class="ibox ">
       <div class="ibox-content">
-        {{#if state$list}}
+        {{#if state$isNull}}
           {{> render component="supplierFilter"}}
           <table class="table table-condensed table-hover table-striped">
             <thead>
@@ -23,13 +23,27 @@
               {{/each}}
             </tbody>
           </table>
+
+          <hr>
+          {{#if state$orderNote}}
+            <div><p class="text-danger pull-left">Note: &nbsp;</p>{{state$orderNote}}</div>
+          {{else}}
+            <textarea name="supplierOrderNote" id="supplierOrderNote" class="form-control message-input-post" placeholder="Add notes here and press enter to submit"></textarea>
+          {{/if}}
         {{else}}
           <h4>You haven't created any orders.</h4> <br>
           <a href="#" class="gotoStocktake">Click here</a> to go to the stocktake and create orders. 
         {{/if}}
-
+        
       </div>
     </div>
   </div>
+
   {{> render component='commentsPanel' id=state$version type='stockOrders'}}
+
+  <!-- COMPOSE MAIL MODAL-->
+  <div class="modal fade" id="composeMailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    {{> render component = 'composeMail' name="composeMail" initialHtml="Email body"}}
+  </div>
+  <!-- /COMPOSE MAIL MODAL -->
 </template>
