--- a/client/lib/components/users/profile/profile/view.html
+++ b/client/lib/components/users/profile/profile/view.html
@@ -36,6 +36,22 @@
           </p>
           <br>
 
+          <form id="change-pin">
+            <div class="form-group">
+              <label for="new-pin">New PIN</label>
+              <input type="password"
+                     class="form-control"
+                     placeholder="****"
+                     required=""
+                     id="new-pin"
+                     maxlength="4"
+                     pattern="^\d{4}$"
+                     title="Required four-digit PIN.">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+          <br>
+
           <h4>Pay rates</h4>  
           <p>Weekdays ($): 
           {{#if state$isAdminAndManagerPermitted}}
