--- a/client/lib/components/email/view.html
+++ b/client/lib/components/email/view.html
@@ -21,7 +21,13 @@
             <div class="form-group">
               <label class="col-sm-2 control-label emailTitle">Subject:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" value="">
+                <input type="text" class="form-control" value="{{state$subject}}">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Reply To:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control replyTo" value="{{state$replyToEmail}}">
               </div>
             </div>
           </form>
@@ -34,7 +40,7 @@
             <a href="#" class="btn btn-sm btn-primary sendEmail" data-toggle="tooltip" data-placement="top" title="Send">
               <i class="fa fa-reply"></i> Send
             </a>
-            <a href="#" class="btn btn-white btn-sm" data-toggle="tooltip" data-placement="top" title="Discard email">
+            <a href="#" class="btn btn-white btn-sm" data-dismiss="modal" data-toggle="tooltip" data-placement="top" title="Discard email">
               <i class="fa fa-times"></i> Discard
             </a>
           </div>
