--- a/client/lib/components/users/pin_code/pin_code.html
+++ b/client/lib/components/users/pin_code/pin_code.html
@@ -1,9 +1,6 @@
 <template name="pinCode">
   <div>
-    <div class="m-b-md">
-      <img alt="image" class="img-circle circle-border" src="{{state$image}}">
-    </div>
-    <h3>{{state$basic.username}}</h3>
+    {{> render component="userBio" user=state$user}}
     <p>Enter your PIN to unlock </p>
     <form class="m-t" role="form">
       <div class="form-group">
