Improved styles of userBio component.

--- a/client/stylesheets/14_index.less
+++ b/client/stylesheets/14_index.less
@@ -10,5 +10,10 @@
       background-color: @lazur;
       color: @gray;
     }
+
+    .username {
+      white-space: nowrap;
+      overflow: hidden;
+    }
   }
 }
