--- a/client/lib/components/users/switch/switch.html
+++ b/client/lib/components/users/switch/switch.html
@@ -9,6 +9,14 @@
       </div>
     </div>
     <div class="row">
+      <div class="col-md-3 col-lg-3 text-center">
+        <div class="user-bio other-user">
+          <div class="m-b-md">
+            <img src="/images/sign_in.png" alt="Other user">
+          </div>
+          <h3>Someone other?</h3>
+        </div>
+      </div>
       {{# each state$users}}
         {{# if contains this.username state$searchRequest}}
           <div class="col-md-3 col-lg-3 text-center">
