--- a/client/lib/components/stocktake/order_receipts/item/view.html
+++ b/client/lib/components/stocktake/order_receipts/item/view.html
@@ -3,7 +3,7 @@
     <td>{{dateFormat state$receipt.expectedDeliveryDate}}</td>
     <td>{{state$receipt.supplier}}</td>
     <td>$ {{roundCount state$orderedValue}}</td>
-    <td>$ {{state$invoiceFaceValue}}</td>
+    <td>$ {{roundCount state$invoiceFaceValue}}</td>
     <td>
       {{#if state$receipt.received}}
         <a class="btn btn-link receiveDelivery">Delivery received by {{Username state$receipt.receivedBy}} @ {{DateTime state$receipt.receivedDate}}</a>
