--- a/client/lib/components/stocktake/counting/areas/area_filters/view.html
+++ b/client/lib/components/stocktake/counting/areas/area_filters/view.html
@@ -1,20 +1,14 @@
 <template name="areaFilters">
-  <div class="col-md-2 no-margin">
+  <div class="col-md-4 no-margin">
     {{#each state$generalAreas}}
       {{> render component="areaBox" item=this class="garea-filter" name="garea"}}
+      <div class="collapse" id="{{this._id}}">
+        <div class="well">
+        {{#each state$specialAreas this._id}}
+          {{> render component="areaBox" item=this class="sarea-filter" name="sarea"}}
+        {{/each}}
+        </div>
+      </div>
     {{/each}}
-    {{#if state$editable}}
-      <a class="btn btn-block btn-default btn-outline addNewGArea">Add</a>
-    {{/if}}
-  </div>
-  {{#if state$ifGAreaExists}}
-    <div class="col-md-2">
-      {{#each state$specialAreas}}
-        {{> render component="areaBox" item=this class="sarea-filter" name="sarea"}}
-      {{/each}}
-      {{#if state$editable}}
-        <a class="btn btn-block btn-default btn-outline addNewSArea">Add</a>
-      {{/if}}
-    </div>
-  {{/if}}
+  </div>            
 </template>
