current stock receive issue fix

--- a/client/views/main_views/reports/current_stocks_view.html
+++ b/client/views/main_views/reports/current_stocks_view.html
@@ -1,5 +1,5 @@
 <template name="currentStocksReportView">
-  {{> render component="pageHeading" title="Current Stocks Report" category='Reports' name="currentStocksReport"}}
+  {{> render component="pageHeading" title="Daily Stocks Report" category='Reports' name="currentStocksReport"}}
 
   <div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
