--- a/client/views/main_views/home.html
+++ b/client/views/main_views/home.html
@@ -2,9 +2,12 @@
   <div class="wrapper wrapper-content">
     {{#if currentUser}}
       <div class="row">
-          <div class="col-md-7"><div class="ibox float-e-margins">
+          <div class="col-md-7">
+            <div class="ibox float-e-margins">
+            {{> render component="clock"}}
             {{> render component="newsFeed" user=currentUser}}
-          </div></div>
+            </div>
+          </div>
         <div class="col-md-5">
           <div class="ibox float-e-margins">
             {{> render component="shiftsSummary"}}
