--- a/client/lib/components/roster/weekly/week/view.html
+++ b/client/lib/components/roster/weekly/week/view.html
@@ -1,148 +1,6 @@
 <template name="weeklyShiftRoster">
-    <div class="collapse" id="collapse">
-    <div class="row">
-        <div class="col-md-4" data-pg-collapsed>
-            <div class="ibox">
-                <div class="ibox-content">
-                    <button class="btn btn-sm pull-right btn-link" data-toggle="popover" type="button" data-content="The figure shows the actual sales result from the days in the past plus the forecast sales for the rest of the week. So you can see if you're on track.">
-                        <i class="fa fa-question-circle pull-right"></i>
-                    </button>
-                    <h5>Sales</h5>
-                    <h1 class="no-margins">$22,000</h1>
-                    <div class="stat-percent font-bold text-navy">10%
-                        <i class="fa fa-angle-up"></i>
-                    </div>
-                    <small>Forecast: $20,000</small>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4" data-pg-collapsed>
-            <div class="ibox">
-                <div class="ibox-content">
-                    <button class="btn btn-sm pull-right btn-link" data-toggle="popover" type="button" data-content="The figure shows the actual staff cost result from the days in the past plus the forecast staff cost for the rest of the week. So you can see if you're on track.">
-                        <i class="fa fa-question-circle pull-right"></i>
-                    </button>
-                    <h5>Staff Cost</h5>
-                    <h1 class="no-margins">$11,000</h1>
-                    <div class="stat-percent font-bold text-danger">10%
-                        <i class="fa fa-angle-up"></i>
-                    </div>
-                    <small>Rostered: $10,000</small>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4" data-pg-collapsed>
-            <div class="ibox">
-                <div class="ibox-content">
-                    <button class="btn btn-sm pull-right btn-link" data-toggle="popover" type="button" data-content="The figure shows the % of wages compared to sales. It take the actual results from past days and forecasts from future days.">
-                        <i class="fa fa-question-circle pull-right"></i>
-                    </button>
-                    <h5>Staff Cost</h5>
-                    <h1 class="no-margins">50%</h1>
-                    <div class="stat-percent font-bold text-danger">5%
-                        <i class="fa fa-angle-up"></i>
-                    </div>
-                    <small>Rostered: 45%</small>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-lg-12">
-            <table class="table table-striped table-condensed white-bg">
-                <thead data-pg-collapsed>
-                <tr>
-                    <th></th>
-                    <th colspan="2">Monday</th>
-                    <th colspan="2">Tuesday</th>
-                    <th colspan="2">Wednesday</th>
-                    <th colspan="2">Thursday</th>
-                    <th colspan="2">Friday</th>
-                    <th colspan="2">Saturday</th>
-                    <th colspan="2">Sunday</th>
-                </tr>
-                </thead>
-                <thead data-pg-collapsed>
-                <tr>
-                    <th></th>
-                    <th>Forecast</th>
-                    <th>Actual</th>
-                    <th>Forecast</th>
-                    <th>Actual</th>
-                    <th>Forecast</th>
-                    <th>Actual</th>
-                    <th>Forecast</th>
-                    <th>Actual</th>
-                    <th>Forecast</th>
-                    <th>Actual</th>
-                    <th>Forecast</th>
-                    <th>Actual</th>
-                    <th>Forecast</th>
-                    <th>Actual</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>Sales</td>
-                    <td>$2000</td>
-                    <td class="text-info">$2200</td>
-                    <td>$2000</td>
-                    <td class="text-danger">$1800</td>
-                    <td>$2000</td>
-                    <td class="text-info">$2200</td>
-                    <td>$2000</td>
-                    <td class="text-danger">$1800</td>
-                    <td>$2000</td>
-                    <td class="text-info">$2200</td>
-                    <td>$2000</td>
-                    <td class="text-danger">$1800</td>
-                    <td>$2000</td>
-                    <td class="text-info">$2200</td>
-                </tr>
-                <tr>
-                    <td>Staff Cost $</td>
-                    <td>$1000</td>
-                    <td>$1100</td>
-                    <td>$1000</td>
-                    <td>$1100</td>
-                    <td>$1000</td>
-                    <td>$1100</td>
-                    <td>$1000</td>
-                    <td>$1100</td>
-                    <td>$1000</td>
-                    <td>$1100</td>
-                    <td>$1000</td>
-                    <td>$1100</td>
-                    <td>$1000</td>
-                    <td>$1100</td>
-                </tr>
-                <tr>
-                    <td>Staff Cost %</td>
-                    <td>50%</td>
-                    <td>50%</td>
-                    <td>50%</td>
-                    <td>50%</td>
-                    <td>50%</td>
-                    <td>50%</td>
-                    <td>50%</td>
-                    <td>50%</td>
-                    <td>50%</td>
-                    <td>50%</td>
-                    <td>50%</td>
-                    <td>50%</td>
-                    <td>50%</td>
-                    <td>50%</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-        </div>
-
-  <div class="row">
-    {{#each state$week}}
-      {{> render component="weeklyRosterDay" name=this origin=state$origin}}
-    {{/each}}
-  </div>
+  {{> render component="weeklyFigures" week=state$week}}
+  {{#each state$week}}
+    {{> render component="weeklyRosterDay" name=this origin=state$origin}}
+  {{/each}}
 </template>
