--- a/client/lib/components/users/switch/switch.html
+++ b/client/lib/components/users/switch/switch.html
@@ -1,28 +1,18 @@
 <template name="switchUser">
   <div class="switch-user">
     <div class="row">
-      <div class="col-md-12 col-lg-12">
-        {{# autoForm id="switchUser" schema=state$schema}}
-          {{> afQuickField id="userPicker"
-                           name="username"}}
-        {{/ autoForm}}
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3 col-lg-3 text-center">
+      <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 text-center">
         <div class="user-bio other-user">
           <div class="m-b-md">
             <img src="/images/sign_in.png" alt="Other user">
           </div>
-          <h3>Someone other?</h3>
+          <h3>Someone else?</h3>
         </div>
       </div>
       {{# each state$users}}
-        {{# if contains this.username state$searchRequest}}
-          <div class="col-md-3 col-lg-3 text-center">
-            {{> render component="userBio" user=this onClick=action$switchUser}}
-          </div>
-        {{/ if}}
+        <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 text-center">
+          {{> render component="userBio" user=this onClick=action$switchUser}}
+        </div>
       {{/ each}}
     </div>
   </div>
