--- a/client/stylesheets/14_index.less
+++ b/client/stylesheets/14_index.less
@@ -15,5 +15,12 @@
       white-space: nowrap;
       overflow: hidden;
     }
+
+    .m-b-md {
+      > img {
+        width: 75%;
+        height: 75%;
+      }
+    }
   }
 }
