--- a/client/views/main_views/stocktake/counting_view.html
+++ b/client/views/main_views/stocktake/counting_view.html
@@ -1,6 +1,6 @@
 <template name="stocktakeCountingMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title='Stocktake Counting' category="Stocktake"}}
+  {{> render component="pageHeading" title='Stocktake Counting' category="Stocktake List"}}
 
   <div class="wrapper wrapper-content">
     {{> render component='stockCounting'}}
