change edit button with new name suggested

--- a/client/lib/components/stocktake/counting/list/view.html
+++ b/client/lib/components/stocktake/counting/list/view.html
@@ -5,7 +5,7 @@
       {{#if state$editable}}
         <a class="btn btn-link btn-sm pull-right saveStockTake"><i class="fa fa-fw fa-save"></i>Save</a>
       {{else}}
-        <a class="btn btn-link btn-sm pull-right editStockTake"><i class="fa fa-fw fa-edit"></i>Edit</a>
+        <a class="btn btn-link btn-sm pull-right editStockTake"><i class="fa fa-fw fa-edit"></i>Edit Stocktake Template</a>
       {{/if}}
       {{dateFormat state$stocktakeMain.stocktakeDate}}
       <hr>
