Added link to switch-user page.

--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -33,6 +33,7 @@
                 <li><a href="/users">Users</a></li>
                 {{/if}} -->
                 <li class="divider"></li>
+                <li><a href="{{pathFor 'switchUser'}}">Switch user</a></li>
                 <li><a href="" id="signOutButton">Logout</a></li>
               </ul>
             </div>
