--- a/client/lib/components/email/view.html
+++ b/client/lib/components/email/view.html
@@ -33,8 +33,7 @@
           </form>
           <br>
           <div class="clearfix"></div>
-          {{> render component="textEditor" id='composeMailEditorSubmit' 
-        initialHtml=state$initialHTML}}
+          {{> render component="textEditor" id='composeMailEditorSubmit' initialHtml=state$initialHTML}}
 
           <div class="mail-body text-right tooltip-demo">
             <a href="#" class="btn btn-sm btn-primary sendEmail" data-toggle="tooltip" data-placement="top" title="Send">
