added newest changes

--- a/client/lib/components/stocktake/order_receive/list/view.html
+++ b/client/lib/components/stocktake/order_receive/list/view.html
@@ -23,7 +23,7 @@
                   <td><b>Total</b></td>
                   <td></td>
                   <td></td>
-                  <td><b>$ {{state$total}}</b></td>
+                  <td><b>$ {{roundCount state$total}}</b></td>
                 </tr>
               </tbody>
             </table>
