--- a/client/lib/components/email/view.html
+++ b/client/lib/components/email/view.html
@@ -15,7 +15,7 @@
             <div class="form-group">
               <label class="col-sm-2 control-label">To:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control emailTo" value="alex.smith@corporat.com">
+                <input type="text" class="form-control emailTo" value="{{state$supplier.email}}">
               </div>
             </div>
             <div class="form-group">
