--- a/client/lib/components/navigations/heading/view.html
+++ b/client/lib/components/navigations/heading/view.html
@@ -98,7 +98,7 @@
       {{#if state$isIngredientsList}}
       <div class="title-action">
         {{#if state$isManagerOrAdmin}}
-        <a href="#addIngredientModal" class="btn btn-primary"  data-toggle="modal">Add new ingredient</a>
+        <a href="#addIngredientModal" class="btn btn-primary"  data-toggle="modal">Add new stock</a>
         {{/if}}
       </div>
       {{/if}}
