--- a/client/lib/components/stock/edit/view.html
+++ b/client/lib/components/stock/edit/view.html
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">{{#if state$isManagerOrAdmin}} Edit {{/if}} Ingredient</h4>
+        <h4 class="modal-title" id="myModalLabel">{{#if state$isManagerOrAdmin}} Edit {{/if}} Stocks</h4>
       </div>
       <form class="form-horizontal" role="form" data-id="{{state$id}}">
         <div class="modal-body">
@@ -31,7 +31,12 @@
             <label class="col-sm-4 control-label">Supplier</label>
             <div class="col-sm-6 ">
               {{#if state$isManagerOrAdmin}}
-              <input type="text" name="supplier" class="form-control" placeholder="Add Supplier's name" value="{{item.suppliers}}">
+              <select name="supplier" class="form-control">
+                <option value="{{item.suppliers}}">{{SupplierName item.suppliers}}</option>
+                {{#each state$suppliers}}
+                <option value="{{_id}}">{{name}}</option>
+                {{/each}}        
+              </select>
               {{else}}
               <div class="form-control">{{item.suppliers}}</div>
               {{/if}}
