--- a/client/lib/components/stock/master_list/list/view.html
+++ b/client/lib/components/stock/master_list/list/view.html
@@ -2,7 +2,7 @@
   <div class="col-lg-12">
     <div class="row">
       <div class="col-sm-12">
-        <input type="text" name="searchIngs"  id="searchIngBox" class="form-control col-sm-8" placeholder="Search from Code, description or supplier">
+        <input type="text" name="searchIngs"  id="searchIngBox" class="form-control col-sm-8" placeholder="Search from Code, description">
       </div>
     </div>
     <hr>
