--- a/client/lib/components/stock/submit/view.html
+++ b/client/lib/components/stock/submit/view.html
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">Add Ingredients</h4>
+        <h4 class="modal-title" id="myModalLabel">Add Stocks</h4>
       </div>
       <form class="form-horizontal" role="form">
         <div class="modal-body">
@@ -22,7 +22,11 @@
           <div class="form-group">
             <label class="col-sm-4 control-label">Supplier</label>
             <div class="col-sm-6 ">
-              <input type="text" name="supplier" class="form-control" placeholder="Add Supplier's name" >
+              <select name="supplier" class="form-control">
+                {{#each state$suppliers}}
+                <option value="{{_id}}">{{name}}</option>
+                {{/each}}        
+              </select>
             </div>
           </div>
           <div class="form-group">
