--- a/client/lib/components/stocktake/ordering/supplier_filter/view.html
+++ b/client/lib/components/stocktake/ordering/supplier_filter/view.html
@@ -1,10 +1,10 @@
 <template name="supplierFilter">
   {{#each state$suppliers}}
-    <a class="btn {{#if state$receiptExists this}} btn-primary {{else}} btn-default {{/if}} activateSupplier" data-id="{{this}}">{{this}}
+    <a class="btn {{#if state$receiptExists this}} btn-primary {{else}} btn-default {{/if}} activateSupplier" data-id="{{this}}">{{SupplierName this}}
     </a>
   {{/each}}
   <hr>
-  <h2>{{state$activeSupplier}}
+  <h2>{{SupplierName state$activeSupplier}}
     <small class="text-info pull-right">
     {{#if state$deliveryDate}}
       Expect delivery on <a href="#" class="expectedDeliveryDate" data-pk="1">{{timeFormattedWithDate state$deliveryDate}}</a>      
