--- a/client/lib/components/jobItems/master_list/list/view.html
+++ b/client/lib/components/jobItems/master_list/list/view.html
@@ -8,7 +8,7 @@
     <hr>
     <div class="ibox float-e-margins">
       <div class="table-responsive">
-        <table class="table table-striped">
+        <table class="table">
           <thead>
             <tr>
               <th>Name</th>
