--- a/client/lib/components/stocktake/ordering/supplier_filter/view.html
+++ b/client/lib/components/stocktake/ordering/supplier_filter/view.html
@@ -7,7 +7,8 @@
   <h2>{{SupplierName state$activeSupplier}}
     <small class="text-info pull-right">
     {{#if state$deliveryDate}}
-      Expect delivery on <a href="#" class="expectedDeliveryDate" data-pk="1">{{timeFormattedWithDate state$deliveryDate}}</a>      
+      Expect delivery on 
+      <a href="#" data-date-format="yyyy-mm-dd" data-date="{{dateFormat state$deliveryDate}}" class="expectedDeliveryDate" data-pk="1">{{timeFormattedWithDate state$deliveryDate}}</a>      
     {{/if}}
     {{#if state$receipt}}
     <!-- Set this date with x editable -->
