--- a/client/lib/components/navigations/heading/view.html
+++ b/client/lib/components/navigations/heading/view.html
@@ -120,9 +120,23 @@
               <button class="btn btn-primary" id="publishRoster">Publish Roster</button>
             {{/if}}
           {{/if}}
-          <a href="" class="btn btn-white previousWeek"><i class="fa fa-chevron-left"></i></a>
-          <a href="" class="btn btn-white thisWeek">This Week</a>
-          <a href="" class="btn btn-white nextWeek"><i class="fa fa-chevron-right"></i></a>
+
+          <div class="btn-group" role="group">
+            <a href="" class="btn btn-white previousWeek"><i class="fa fa-chevron-left"></i></a>
+
+            <div class="btn-group" role="group">
+              <button type="button"
+                      style="padding: 6px"
+                      class="btn btn-white thisWeek datepicker dropdown-toggle calendar-toggle"
+                      data-toggle="dropdown"
+                      aria-haspopup="true"
+                      aria-expanded="false">
+                {{state$currentDate}}
+                <span class="caret"></span>
+              </button>
+            </div>
+            <a href="" class="btn btn-white nextWeek"><i class="fa fa-chevron-right"></i></a>
+          </div>
         </div>
       {{/if}}
 
