--- a/client/lib/components/stocktake/order_receive/item/view.html
+++ b/client/lib/components/stocktake/order_receive/item/view.html
@@ -10,7 +10,22 @@
     <td>$ {{roundCount state$total}}</td>
     <td>
       {{#if state$stock.received}}
-        {{state$deliveryStatus}}
+        {{#if state$isEditable state$stock._id}}
+          {{#if state$isDeliveredCorreclty}}
+            <a class="btn btn-danger wrongQuantity">Wrong Quantity</a>
+            <a class="btn btn-danger wrongPrice">Wrong Price</a>
+          {{/if}}
+          {{#if state$isWrongQuantity}}
+            <a class="btn btn-danger wrongQuantity">Wrong Quantity</a>
+          {{/if}}
+          {{#if state$isWrongPrice}}
+            <a class="btn btn-danger wrongPrice">Wrong Price</a>
+          {{/if}}
+          <button class="btn btn-info btn-circle btn-outline receiveOrderItem" type="button"><i class="fa fa-check"></i></button>
+        {{else}}
+          {{state$deliveryStatus}}
+          <a href="#" class="editPermitted">[Edit]</a>
+        {{/if}}
       {{else}}
         {{#if state$isDeliveredCorreclty}}
         {{else}}
@@ -30,6 +45,7 @@
             <a class="btn btn-danger wrongQuantity">Wrong Quantity</a>
           {{/if}}
         {{/if}}
+        <button class="btn btn-info btn-circle btn-outline receiveOrderItem" type="button"><i class="fa fa-check"></i></button>
       {{/if}}
     </td>
   </tr>
