--- a/client/lib/components/stocktake/receive_modal/view.html
+++ b/client/lib/components/stocktake/receive_modal/view.html
@@ -20,7 +20,10 @@
                 <div class="form-group">
                   <div class="col-sm-3"></div>
                   <div class="col-sm-6">
-                    <input name="price" class="form-control text-right font-20" data-mask="$9,999.99"/>
+                    <div class="input-group m-b">
+                      <div class="input-group-addon">$</div>
+                      <input name="price" class="form-control text-right font-20"/>
+                    </div>
                   </div>   
                 </div> 
                 <div class="text-center m-b-md">Do you also want to:</div>
