--- a/client/lib/components/stocktake/order_receive/item/view.html
+++ b/client/lib/components/stocktake/order_receive/item/view.html
@@ -11,16 +11,8 @@
     <td>
       {{#if state$stock.received}}
         {{#if state$isEditable state$stock._id}}
-          {{#if state$isDeliveredCorreclty}}
-            <a class="btn btn-danger wrongQuantity">Wrong Quantity</a>
-            <a class="btn btn-danger wrongPrice">Wrong Price</a>
-          {{/if}}
-          {{#if state$isWrongQuantity}}
-            <a class="btn btn-danger wrongQuantity">Wrong Quantity</a>
-          {{/if}}
-          {{#if state$isWrongPrice}}
-            <a class="btn btn-danger wrongPrice">Wrong Price</a>
-          {{/if}}
+          <a class="btn btn-sm btn-outline btn-danger wrongQuantity">Wrong Quantity</a>
+          <a class="btn btn-sm btn-outline btn-danger wrongPrice">Wrong Price</a>
           <button class="btn btn-info btn-circle btn-outline receiveOrderItem" type="button"><i class="fa fa-check"></i></button>
         {{else}}
           {{state$deliveryStatus}}
@@ -29,20 +21,13 @@
       {{else}}
         {{#if state$isDeliveredCorreclty}}
         {{else}}
-          {{#if state$isWrongQuantity}}
-          {{else}}
-            {{#if state$isWrongPrice}}
-            {{else}}
-              <a class="btn btn-primary deliveredCorrectly">Delivered correctly</a>
-            {{/if}}
-          {{/if}}
           {{#if state$isWrongPrice}}
           {{else}}
-            <a class="btn btn-danger wrongPrice">Wrong Price</a>
+            <a class="btn btn-sm btn-outline btn-danger wrongPrice">Wrong Price</a>
           {{/if}}
           {{#if state$isWrongQuantity}}
           {{else}}
-            <a class="btn btn-danger wrongQuantity">Wrong Quantity</a>
+            <a class="btn btn-sm btn-outline btn-danger wrongQuantity">Wrong Quantity</a>
           {{/if}}
         {{/if}}
         <button class="btn btn-info btn-circle btn-outline receiveOrderItem" type="button"><i class="fa fa-check"></i></button>
