--- a/client/lib/components/jobItems/edit/view.html
+++ b/client/lib/components/jobItems/edit/view.html
@@ -33,7 +33,7 @@
                   <label class="col-sm-2 control-label">Sections</label>
                   <div class="col-sm-10">
                     <select name="sections" class="form-control">
-                      <option value="{{state$mySection._id}}">{{state$mySection.name}}</option>
+                      <option value="{{state$item.section}}">{{sectionById state$item.section}}</option>
                       {{#each state$sectionsWithOutSelected}}
                       <option value="{{_id}}">{{name}}</option>
                       {{/each}}
