--- a/client/lib/components/menuitems/detail/view.html
+++ b/client/lib/components/menuitems/detail/view.html
@@ -5,20 +5,36 @@
   <div class="wrapper wrapper-content animated">
     <div class="row">
       <div class="col-lg-12">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Instructions</h3>
+        <div class="row">
+          
+          <div class="col-lg-4 col-xs-12 pull-right">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Settings</h3>
+              </div>
+              <div class="panel-body editorPanel">
+                {{> render component="editMenuItem"}}
+              </div>
+            </div>
           </div>
-          <div class="panel-body editorPanel">
-            <p>{{{state$menu.instructions}}}<br></p>
+          
+          <div class="col-lg-8 col-xs-12">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Instructions</h3>
+              </div>
+              <div class="panel-body editorPanel">
+                <p>{{{state$menu.instructions}}}<br></p>
+              </div>
+              <div class="panel-body editor hide">
+                {{> render component="textEditor" id='menuItemEditorDetail'
+              initialHtml=state$initialHTML}}
+              </div>
+              {{#if state$isPermitted}}
+              <div class="panel-footer textEdit">Click here to edit</div>
+              {{/if}}
+            </div>
           </div>
-          <div class="panel-body editor hide">
-            {{> render component="textEditor" id='menuItemEditorDetail' 
-          initialHtml=state$initialHTML}}
-          </div>
-          {{#if state$isPermitted}}
-          <div class="panel-footer textEdit">Click here to edit</div>
-          {{/if}}
         </div>
         <hr>
         <h1>Ingredients</h1>
