--- a/client/lib/components/menuitems/widgets/view.html
+++ b/client/lib/components/menuitems/widgets/view.html
@@ -14,7 +14,12 @@
         <div class="row">
           <div class="col-xs-12 text-right">
             <span>Sale Price</span>
-            <h2 class="font-bold">$ {{state$item.salesPrice}}</h2>
+            <h2 class="font-bold">$ 
+              <a href="#" 
+                 class="editMenuItem" 
+                 data-id="{{state$id}}" 
+                 style="color: #fff; border-color: #fff;">{{state$item.salesPrice}}</a>
+            </h2>
           </div>
         </div>
       </div>
