Drag'n'drop and styles fixes.

--- a/client/lib/components/jobItems/submit/view.html
+++ b/client/lib/components/jobItems/submit/view.html
@@ -96,6 +96,7 @@
             <input type="text" name="checklist" class="form-control addItemToChecklist" placeholder="Add an item to checklist and press enter">
             <br/>
             <ol class="checklist list-group"></ol>
+            {{initChecklist}}
           </div>
         </div> 
         <div class="form-group">
