--- a/client/stylesheets/globals/elements.import.less
+++ b/client/stylesheets/globals/elements.import.less
@@ -416,7 +416,7 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 }
 
 .list-group-item {
-  background-color: inherit;
+  background-color: #ffffff;
   border: 1px solid @border-color;
   display: block;
   margin-bottom: -1px;
