--- a/client/stylesheets/12_index.less
+++ b/client/stylesheets/12_index.less
@@ -53,7 +53,7 @@
     margin-right: -300px;
 }
 // flyout-container redesign
-.flyout-container {
+.flyout-container, .flyout-notifi-container {
     position: fixed;
     top: 0 !important;
     width: 500px;
@@ -121,7 +121,7 @@
             font-size: 13px;
             color: #696969;
             position: relative;
-            .theme-config-close-btn {
+            .theme-config-close-btn, .theme-config-close-notifi-btn {
                 position: absolute;
                 left: 0;
                 top: 0;
@@ -137,6 +137,12 @@
             }
         }
     }
+
+  .white-notify-bg {
+      background: #fff;
+      width: 100%;
+      height: 100%;
+  }
 
     .setings-item::after {
         clear: both;
@@ -237,11 +243,16 @@
     }
 }
 .navbar-top-links {
-    .dropdown-alerts {
-        width: 400px;
-        min-width: 0;
-        margin-left: -74px;
+  .dropdown-alerts {
+      width: 400px;
+      min-width: 0;
+      margin-left: -74px;
+  }
+  .notifi-alerts {
+    & > li {
+      width: 400px;
     }
+  }
 }
 .filter-menus {
     width: 93% !important;
@@ -266,14 +277,14 @@ span {
 
 // media queries for tablet
 @media (min-width: 768px) and (max-width: 991px){
-  .flyout-container{
+  .flyout-container, .flyout-notifi-container{
     width: 50%;
   }
 }
 
 
 @media (max-width: 768px){
-  .flyout-container{
+  .flyout-container, .flyout-notifi-container{
     width: 100%;
 
     .setings-item{
