Added sales calibration filtering

--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -104,7 +104,7 @@
             </a>
             <ul class="nav nav-second-level {{isActiveRoute regex='salesCalibration|actualSales|cafeSalesForecast|weeklySalesForecastMenusList' className='in'}}">
               <li class="{{isActiveRoute regex='salesCalibration'}}">
-                <a href="/sales/calibration">Calibration</a>
+                <a href="/sales/calibration/all/all">Calibration</a>
               </li>
               <li class="{{isActiveRoute regex='actualSales'}}">
                 <a href="/sales/{{today}}">Actual Sales</a>
