--- a/client/views/main_views/sales/calibration/view.html
+++ b/client/views/main_views/sales/calibration/view.html
@@ -3,6 +3,7 @@
   {{> render component="pageHeading" title="Sales Calibration" category='Sales' name="calibration"}}
 
   <div class="wrapper wrapper-content animated">
+    {{> render component="salesCalibratedFilters"}}
     <div class="row">
       <div class="col-lg-12">
         {{> render component="salesCalibratedList"}}
