--- a/client/lib/components/roster/shifts/list/view.html
+++ b/client/lib/components/roster/shifts/list/view.html
@@ -3,7 +3,7 @@
   {{#if state$shiftsCount}}
   {{else}} 
   <div>
-    Create new shift to continue sheduling
+    Create new shift to continue scheduling
   </div>
   {{/if}}
 </template>
